{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 11,
  "lineage": "0edfeb02-ae7e-9110-6483-227aa929c641",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-03cf6b100207598f3",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-03cf6b100207598f3",
            "name": "alb_sg",
            "tags": {
              "Envrionment": "dev",
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0697bc43c92e681f6",
            "description": "bastion",
            "filter": null,
            "id": "sg-0697bc43c92e681f6",
            "name": "terraform-20230709080819428900000002",
            "tags": {
              "Envrionment": "dev",
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-092d370367bfffbd8",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-092d370367bfffbd8",
            "name": "dev_rds_sg",
            "tags": {
              "Envrionment": "dev",
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_svr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0bc88cf876e99a7da",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0bc88cf876e99a7da",
            "name": "main_web_server_sg",
            "tags": {
              "Envrionment": "dev",
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "dev_whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-083e74f4f28c5645d",
            "cidr_block": "192.169.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07bf2aa7c7dacc143",
                "cidr_block": "192.169.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083e74f4f28c5645d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061aefa4e95bb3234",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "Dev",
              "Name": "dev_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dev_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0ab4f7e3c29d5653f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ab4f7e3c29d5653f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03cf6b100207598f3",
            "security_group_rule_id": "sgr-0ab4f7e3c29d5653f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dev_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-003df6e293f0e6395",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-003df6e293f0e6395",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0697bc43c92e681f6",
            "security_group_rule_id": "sgr-003df6e293f0e6395",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dev_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0a243c38c1ab4da28",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a243c38c1ab4da28",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-092d370367bfffbd8",
            "security_group_rule_id": "sgr-0a243c38c1ab4da28",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dev_svr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-084ee802c7dd76a7a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-084ee802c7dd76a7a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bc88cf876e99a7da",
            "security_group_rule_id": "sgr-084ee802c7dd76a7a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_svr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-03b53d997dd4a2c5a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03b53d997dd4a2c5a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03cf6b100207598f3",
            "security_group_rule_id": "sgr-03b53d997dd4a2c5a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev_bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-05a0a4afe59ef436c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05a0a4afe59ef436c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0697bc43c92e681f6",
            "security_group_rule_id": "sgr-05a0a4afe59ef436c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-05d894af69137964c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-05d894af69137964c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-092d370367bfffbd8",
            "security_group_id": "sg-092d370367bfffbd8",
            "security_group_rule_id": "sgr-05d894af69137964c",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev_svr_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-003280531de956860",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-003280531de956860",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bc88cf876e99a7da",
            "security_group_id": "sg-092d370367bfffbd8",
            "security_group_rule_id": "sgr-003280531de956860",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_db",
            "data.aws_security_group.dev_svr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev_svr_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0c5b957cfb8064b45",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c5b957cfb8064b45",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03cf6b100207598f3",
            "security_group_id": "sg-0bc88cf876e99a7da",
            "security_group_rule_id": "sgr-0c5b957cfb8064b45",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_alb",
            "data.aws_security_group.dev_svr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev_web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-01c53d397cc43ee00",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01c53d397cc43ee00",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0697bc43c92e681f6",
            "security_group_id": "sg-0bc88cf876e99a7da",
            "security_group_rule_id": "sgr-01c53d397cc43ee00",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_bastion",
            "data.aws_security_group.dev_svr"
          ]
        }
      ]
    }
  ]
}